# gravity-simulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: grid_config.json  window_config.json
example_scenes/: stable_orbit.json  two_stars.json
exemple_scene/: exemple_scene.json
include/glad/: glad.h
scenes/: moon.json  two_stars.json
src/: main.cpp
src/engine/: camera.cpp  camera.h  grid_renderer.cpp  grid_renderer.h  json_reader.cpp  json_reader.h  keyboard_manager.cpp  keyboard_manager.h  physics.cpp  physics.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sphere_renderer.cpp  sphere_renderer.h  window.cpp  window.h
src/game/: controller.cpp  controller.h  entity_manager.cpp  entity_manager.h  grid_manager.cpp  grid_manager.h  planet_manager.cpp  planet_manager.h  scene.cpp  scene.h
src/game/config/: camera_config.json  grid_config.json  physics_config.json  render_config.json  window_config.json
src/game/shaders/: grid.frag  grid.vert  planet.frag  planet.vert  plent.frag  star.frag  star.vert
